--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li> Docker </li>
         <li> Ansible </li>
         <li> Integración contínua: Madurez y Prductividad en el desarrollo de Software. </li>
+        <li>Kubernetes</li>
     </ul>
 </body>
 </html>
