Corrigiendo curso de vaggrant

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li> Vagrant </li>
+        <li> Vagrant: Máquinas Virtuales </li>
         <li> Docker: Creando conteiner sin dolor de cabeza. </li>
         <li> Ansible </li>
         <li> Integración contínua: Madurez y Prductividad en el desarrollo de Software. </li>
