--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li> Vagrant: Máquinas Virtuales </li>
         <li> Docker: Creando conteiner sin dolor de cabeza. </li>
-        <li> Ansible: Infraestructura como código</li>
+        <li> Ansible </li>
         <li> Integración contínua: Madurez y Prductividad en el desarrollo de Software. </li>
         <li>Kubernetes</li>
     </ul>
