Modificando el nombre del curso Ansible

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li> Vagrant: Máquinas Virtuales </li>
         <li> Docker: Creando conteiner sin dolor de cabeza. </li>
-        <li> Ansible </li>
+        <li> Ansible: Su infraestructura como código. </li>
         <li> Integración contínua: Madurez y Prductividad en el desarrollo de Software. </li>
         <li>Kubernetes: Introducción a la orquestación de containers</li>
     </ul>
